--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,14 +4,56 @@ body {
         "sidebar header" auto
         "sidebar main" 1fr
         / auto 1fr;
+        min-height: 100vh;
 }
 
-header {
+body > header {
     grid-area: header;
 }
 
 nav {
     grid-area: sidebar;
+    padding: 1rem;
+    height: 100%;
+    box-sizing: border-box;
+    width: clamp(212px + 2rem, 25vw, 350px);
+    color: white;
+    background-color: #9333EA;
+    font-weight: 600;
+}
+
+nav a {
+    text-decoration: none;
+    color: white;
+}
+
+#sidebar-header {
+    display: grid;
+    grid-template-columns: 3rem 1fr;
+    align-items: center;
+    gap: .7rem;
+}
+
+#sidebar-header-title {
+    margin: 0;
+}
+
+#sidebar-header-icon {
+    width: 3rem;
+}
+
+.sidebar-icon {
+    justify-self: center;
+    filter: invert(1);
+}
+
+.sidebar-links-group {
+    display: grid;
+    grid-template-columns: 3rem 1fr;
+    column-gap: .7rem;
+    row-gap: 1.5rem;
+    align-items: center;
+    margin-top: 3rem;
 }
 
 main {
