--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,13 +14,13 @@ body > header {
 
 nav {
     grid-area: sidebar;
-    padding: 1rem;
     height: 100%;
-    box-sizing: border-box;
-    width: clamp(212px + 2rem, 25vw, 350px);
+    width: clamp(205px, 25vw, 300px);
+    padding: clamp(1rem, 2vw, 2rem);
     color: white;
     background-color: #9333EA;
     font-weight: 600;
+    font-size: 1.2rem;
 }
 
 nav a {
@@ -30,17 +30,18 @@ nav a {
 
 #sidebar-header {
     display: grid;
-    grid-template-columns: 3rem 1fr;
+    grid-template-columns: 2.5rem 1fr;
     align-items: center;
-    gap: .7rem;
+    gap: 1rem;
 }
 
 #sidebar-header-title {
+    font-weight: 600;
     margin: 0;
 }
 
 #sidebar-header-icon {
-    width: 3rem;
+    width: 2.5rem;
 }
 
 .sidebar-icon {
@@ -50,8 +51,8 @@ nav a {
 
 .sidebar-links-group {
     display: grid;
-    grid-template-columns: 3rem 1fr;
-    column-gap: .7rem;
+    grid-template-columns: 2.5rem 1fr;
+    column-gap: 1rem;
     row-gap: 1.5rem;
     align-items: center;
     margin-top: 3rem;
