--- a/styles/styles.css
+++ b/styles/styles.css
@@ -121,6 +121,65 @@ nav a {
     margin-top: 3rem;
 }
 
-main {
+#main {
     grid-area: main;
+    display: grid;
+    grid-auto-flow: row dense;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)) minmax(20ch, 400px);
+    grid-auto-rows: min-content;
+    gap: 2rem;
+    padding: 2rem;
+    min-height: 100%;
+    background-color: rgb(218, 218, 218);
 }
+
+.main-card > h2{
+    font-size: 1.4rem;
+    margin-top: 0;
+    font-weight: 600;
+}
+
+
+.main-card-content {
+    background-color: white;
+    padding: 2rem;
+    border-radius: 1rem;
+    box-shadow: 5px 5px 5px 2px rgba(0, 0, 0, 0.1);
+}
+
+.main-grid-right {
+    grid-column-end: -1;
+}
+
+.announcements{
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.announcement {
+    list-style: none;
+}
+
+.announcement > h3{
+    margin: 0;
+    margin-bottom: .2rem;
+    font-size: 1.1rem;
+    font-weight: 600;
+}
+
+.announcement > p{
+    margin: 0;
+    color: rgb(39, 39, 39);
+}
+
+.horizontal-line {
+    align-self: center;
+    width: 100%;
+    height: 2px;
+    margin: 1rem 0;
+    background-color: rgb(218, 218, 218);
+}
+
