--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,7 @@ body {
     column-gap: 1.5rem;
     padding: 1rem 1.5rem;
     box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.30);
+    z-index: 1;
 }
 
 #header a {
