--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,7 +17,7 @@ body {
     align-items: center;
     column-gap: 1.5rem;
     padding: 1rem 1.5rem;
-    box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.30);
+    box-shadow: 5px 0px 10px 3px rgba(0, 0, 0, 0.30);
     z-index: 1;
 }
 
@@ -196,6 +196,10 @@ nav a {
 
 .recent-chat {
     display: contents;
+}
+
+.recent-chat:hover {
+    background-color: grey;
 }
 
 .recent-chat img {
