Improve contrast on stat charts

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -340,7 +340,7 @@ nav a {
 }
 
 .bar-chart-grey {
-    background-color: rgba(231, 231, 231, 0.87);;
+    background-color: rgb(218, 218, 218);
 }
 
 .bar-chart-red {
